css/main.css
/* ... */
/*@media screen
  and (min-device-width: 1200px)
  and (max-device-width: 1600px)  {
    section.secondary{
      height:800px;
    }
}*/

section.secondary-1-moon {
  height:400px;
}
section#secondary-2-ISS{
  margin-top:50px;
}
section#secondary-3-BSQ{
  background-color: #161827;
}

section#secondary-4-horizon{
  height:200px;
  background-color: #242A38;
}

section#secondary-5-dropfab{
  background-color:#344058;
}

section#secondary-6-ultrascope{

  background-color:#7A6468;
}

section#secondary-7-fuelpod{
  background-color:#B08C6B;
}

section#secondary-8-shore{
  height:40px;
  background-color:#4897C8;
}

section#secondary-9-octotalk{
  background-color:#166AAB;
}

section#secondary-10-coast {
  height:650px;
  background-color:#0072A9;

}

section#secondary-11-phi{
  background-color:#AEB1C0;
}

section#secondary-12-osa{
  background-color:#161827;
}

section#secondary-13-mavericks{
  background-color:black;
}

.pure-img{
  /*max-width: 100px;
  max-height: 100px;
  padding-right:10px;
  padding-top:0;*/
  max-width: 100%;
height: auto;
display: block;

}

  .mobile-back{
    display:none;
  }
.secondary-project-title{
    -moz-box-sizing: border-box;
  /*position:absolute;*/
  /*background-image: url("../img/dropfab-title.png");
  background-repeat: no-repeat;
  background-position: center top;*/


  /*width:8%;*/
  height:inherit;
  background-color: #fff;
  display: -moz-inline-stack;
  display: inline-block;
  vertical-align: top;
  text-align: center;
  position:relative;
  /*margin:0;
  padding:0;*/
}

.secondary-project-title img{
  margin-top:50px;
  /*margin-left:32%;*/
  width:30%;

}

.secondary-project-title a{

  font-size: 0.7em;
  text-align: center;

}

.secondary-project-title a:hover{

}


.secondary-project-desc{
  -moz-box-sizing: border-box;
  /*position:absolute;
  left:7%;*/
  background-color:#F4F7F9;
  height:inherit;
  /*width:29%;*/
  /*display:inline-block;*/

  /*padding:0;*/
  position:relative;
  width:25%;
  display: -moz-inline-stack;
  display: inline-block;
  vertical-align: top;

}
#secondary-2-ISS > .secondary-project-desc{

}

.secondary-project-desc h1{
  font-family: 'robotolight';
  text-align: left;
  color:rgba(0,0,0,0.9);
  margin-left:30px;
  margin-top:3%;
  margin-bottom:5px;
  letter-spacing:2px;
  font-size:1em;
  font-weight: BOLD;

}

.secondary-project-desc p{
  font-family: 'robotolight';
  text-align: left;
  color:rgba(0,0,0,0.7);
  font-size:0.8em;
  margin:0 30px 15px 30px;
  font-weight: BOLD;
  letter-spacing:1px;

}
.stats{
  padding-top:1px;
  margin-left:30px;
  /*transform: translateY(50%);*/
}
.statbox{
  margin-bottom:10px;
}
.statnumber{
  /*height:inherit;*/
  /*display:inline-block;
  background-color:#e4ecec;
  height:55px;
  width:55px;

  text-align: center;*/


}

.statnumber p{
  font-family:'ailerons';
  letter-spacing:-7px;
  font-size:1.5em;
    text-align: center;
    /*margin:0 10px 0 0 ;*/
    color:rgba(0,0,0,0.5);
    margin:5px;
}

.stattext{

  /*display: inline-block;
  margin-top: -15px;*/


}
.shrink{
  font-size:0.7em !important;
}

.stattext p{


  /*font-family:'ailerons';*/
    color:rgba(0,0,0,0.6);
    font-size:1em;
    /*margin: -15px 0 0 20px;*/


    letter-spacing:1px;
    margin:0px;
    margin-left:20px;
    margin-top:5px;

}

.mission-partners{
  position:absolute;

  /*text-align:center;*/
  margin-top:15px;
  width:100%;
  bottom:60px;
}

.mission-partners img{


/*padding:3px;*/
  /*height:100%;*/
}
.partners-images{
  margin-left:30px;
  margin-right:25px;
}

.secondary-project-gallery{
    -moz-box-sizing: border-box;
  /*position:absolute;
  left:36.7%;*/

  background-color:#243442;
  /*background-image:url(../img/projectBackground.jpg);*/
  /*background-size:cover;*/
  /*width:66%;*/
  height:inherit;
  display: -moz-inline-stack;
  display: inline-block;
  vertical-align: top;
  /*margin-left:-50px;*/
  /*z-index:1;*/

  /*border:solid rgba(255,255,255,0.5) 5px;*/
  width:66.6667%;
}


.invisiBorder{
  position:absolute;

  background-color:rgba(255,255,255,0.3);
  width: 50px;
  height:100vh;
  z-index:10;
}

.gallery{
  position:absolute;
  z-index:0;
  width:inherit;
  height:inherit;
  overflow:hidden;
  background-size: auto 100%;
  background-position:50%;
  background-repeat:no-repeat;

  display:none;
  text-align: center;


}
.youtube-embed{
  margin-left:50px;
  margin-top:50px;
  width:75%;
  height:60%;
}
.youtube-frame{
  background-color:black;
}
.project-scroll-back {
  position:absolute;
  left:96%;
  margin-top:10px;
  z-index:111;

}

.project-next{

position:relative;

}
.project-nav{
  position:absolute;
  bottom:60px;
  width:100%;
  text-align: center;
  letter-spacing:0px;
}

.project-nav a{
  color:#2F74B1;
  letter-spacing:0px;
}


.secondary-project-gallery a:hover{
  text-decoration: underline;
}

.secondary-project-gallery a{

  text-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

.project-copy{
  position:relative;
  top:0px;
  height:auto;
}
.project-copy a{
  color:#3481c5;
}

.gallery-1{

}

.gallery-2{
  display: none;
}

.gallery-3{
  display: none;
}

.gallery-thumbs{

  position:relative;
  top:85%;
  /*bottom:20px;*/
  left:25px;
  float:right;
  margin-right:25px;
}
.gallery-thumbs li{
  cursor:pointer;
  display:inline;
  margin:10px;


}
.gallery-thumbs li img{
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);

  height:70px;
  z-index:100;
}

.overlay {
    position: fixed;
    z-index: 20;
    top: 45px;
    left: 100%;
    width: 100%;
    height: 100%;

}

div.onscreen {
    left: 0;

}


.building-a-future {
    width: 350px;
}

.space-tourists, .nanosatellite {
    width: 350px;
}

.overlay > img {
    width: 100%;
}

.relationships {
    margin: 0px 70px;
    padding: 100px 0px;
    text-align: center;
}

.relationships img {
    max-width: 200px;
    width: 100%;
}

.relationships > div {
    position: relative;
}


.plus {
    position: absolute;
    margin: -1px -8px;
}
/* ... */

